--- a/f1-rag-app/app/assets/globals.css
+++ b/f1-rag-app/app/assets/globals.css
@@ -71,3 +71,48 @@ input[type = "submit"]{
 input:focus{
   outline: none;
 }
+
+.loader {
+  display: block; 
+  margin: 10px;
+  width: 60px;   
+  height: 15px;   
+  aspect-ratio: 4;
+  
+
+  background: 
+    radial-gradient(circle closest-side, #383833 90%, #0000) 0% 50%,
+    radial-gradient(circle closest-side, #383833 90%, #0000) 50% 50%,
+    radial-gradient(circle closest-side, #383833 90%, #0000) 100% 50%;
+  
+  background-repeat: no-repeat;
+  background-size: calc(100%/3) 100%;
+  animation: loading 1s infinite linear;
+}
+
+@keyframes loading {
+  33% {background-size: calc(100%/3) 0%, calc(100%/3) 100%, calc(100%/3) 100%}
+  50% {background-size: calc(100%/3) 100%, calc(100%/3) 0%, calc(100%/3) 100%}
+  66% {background-size: calc(100%/3) 100%, calc(100%/3) 100%, calc(100%/3) 0%}
+}
+
+.bubble{
+  margin: 8px;
+  padding: 8px;
+  font-size: 15px;
+  order: none;
+  color: #383833;
+  box-shadow: #959da533 0 8px 24px;
+  width: 80%; 
+  text-align: left;
+}
+.bubble.user{
+  border-radius: 20px 20px 0px 20px;
+  background-color: rgb(255,244,255);
+  margin-left: auto;
+}
+.bubble.assistant{
+  border-radius: 20px 20px 20px 0px;
+  background-color: #dce7ff;
+  
+}
